# playground

./: .appveyor.yml  .clang-format  .gitignore  .travis.yml  .ycm_extra_conf.py  CMakeLists.txt  conanfile.txt  conanws.yml  create-packages.py  mgs_layout  setup.py  t.cpp  todo
adapters/: CMakeLists.txt  conanfile.py
adapters/include/mgs/adapters/: basic_input_adapter.hpp  basic_transformed_input_adapter.hpp  input_adapter_iterator.hpp  transformed_input_adapter_iterator.hpp  transformer_adapter.hpp
adapters/test/: CMakeLists.txt  test_input_adapter_iterator.cpp  test_transformed_input_adapter_iterator.cpp
adapters/test_package/: CMakeLists.txt  conanfile.py  example.cpp
adapters_base/: CMakeLists.txt  conanfile.py
adapters_base/test_package/: CMakeLists.txt  conanfile.py  example.cpp
base16/: CMakeLists.txt  conanfile.py
base16/include/mgs/: base16.hpp
base16/include/mgs/base16/: decoder.hpp  encoder.hpp
base16/test/: CMakeLists.txt  test_base16.cpp
base16/test_package/: CMakeLists.txt  conanfile.py  example.cpp
base32/: CMakeLists.txt  conanfile.py
base32/include/mgs/: base32.hpp
base32/include/mgs/base32/: decoder.hpp  encoder.hpp
base32/test/: CMakeLists.txt  test_base32.cpp
base32/test_package/: CMakeLists.txt  conanfile.py  example.cpp
base32hex/: CMakeLists.txt  conanfile.py
base32hex/include/mgs/: base32hex.hpp
base32hex/include/mgs/base32hex/: decoder.hpp  encoder.hpp
base32hex/test/: CMakeLists.txt  test_base32hex.cpp
base32hex/test/data/: random_data.b32hex.sha256
base32hex/test_package/: CMakeLists.txt  conanfile.py  example.cpp
base64/: CMakeLists.txt  conanfile.py
base64/include/mgs/: base64.hpp
base64/include/mgs/base64/: basic_decoder.hpp  basic_encoder.hpp  basic_encoder_url.hpp  basic_traits.hpp  basic_traits_url.hpp  decoder.hpp  encoder.hpp
base64/test/: CMakeLists.txt  test_base64.cpp
base64/test_package/: CMakeLists.txt  conanfile.py  example.cpp
base64url/: CMakeLists.txt  conanfile.py
base64url/include/mgs/: base64url.hpp
base64url/include/mgs/base64url/: decoder.hpp  encoder.hpp  nopad_decoder.hpp  nopad_encoder.hpp
base64url/test/: CMakeLists.txt  test_base64url.cpp
base64url/test_package/: CMakeLists.txt  conanfile.py  example.cpp
base_n/: CMakeLists.txt  conanfile.py
base_n/include/mgs/base_n/: base_n.hpp  basic_codec.hpp  basic_codec_traits.hpp  basic_decoder.hpp  basic_encoder.hpp  decode_algorithm.hpp  encode_algorithm.hpp  padding_policy.hpp
base_n/test/: CMakeLists.txt  test_base_n.cpp
base_n/test/include/test_helpers/: base_n.hpp
base_n/test_package/: CMakeLists.txt  conanfile.py  example.cpp
binary_to_text/: CMakeLists.txt  conanfile.py
binary_to_text/include/mgs/: binary_to_text.hpp
binary_to_text/include/mgs/binary_to_text/: basic_codec.hpp  basic_decoder.hpp  basic_encoder.hpp  padding_policy.hpp
binary_to_text/test/: CMakeLists.txt  test_binary_to_text.cpp
binary_to_text/test_package/: CMakeLists.txt  example.cpp
codec_base/: CMakeLists.txt  conanfile.py
codec_base/test/: CMakeLists.txt  test_codec_base.cpp
codec_base/test_package/: CMakeLists.txt  example.cpp
codecs/test/: CMakeLists.txt  codec_helpers.hpp  test_basic_input_range_iterator.cpp  test_byte.cpp  test_codec.cpp  test_codec_output.cpp  test_codec_traits.cpp  test_codecs.cpp  test_input_source.cpp  test_input_source_view.cpp  test_sized_input_source.cpp
codecs_base/: CMakeLists.txt  conanfile.py
codecs_base/test/: CMakeLists.txt  test_byte.cpp  test_codec.cpp  test_codec_output.cpp  test_codec_traits.cpp  test_codecs_base.cpp
codecs_base/test_package/: CMakeLists.txt  conanfile.py  example.cpp
concepts/test/: CMakeLists.txt  test_byte.cpp  test_input_transformer.cpp  test_iterable.cpp  test_readable_transformed_input_range.cpp  test_sized_input_transformer.cpp  test_sized_transformed_input_range.cpp  test_transformed_input_range.cpp
exceptions/: CMakeLists.txt  conanfile.py
exceptions/test_package/: CMakeLists.txt  conanfile.py  example.cpp
iterators/: CMakeLists.txt  conanfile.py
iterators/test/: CMakeLists.txt  test_adaptive_iterator.cpp
iterators/test_package/: CMakeLists.txt  conanfile.py  example.cpp
meta/: CMakeLists.txt  conanfile.py
meta/cmake/: meta-config.cmake
meta/test/: CMakeLists.txt  meta_test_helpers.hpp  test_bidirectional_iterator.cpp  test_boolean.cpp  test_common_reference.cpp  test_complete_type.cpp  test_constructible.cpp  test_constructible_from.cpp  test_convertible_to.cpp  test_core_concepts.cpp  test_dereferenceable.cpp  test_derived_from.cpp  test_detected.cpp  test_equality_comparable.cpp  test_forward_iterator.cpp  test_incrementable.cpp  test_incrementable_traits.cpp  test_input_iterator.cpp  test_input_or_output_iterator.cpp  test_iter_concept.cpp  test_iter_traits.cpp  test_iterable.cpp  test_iterator.cpp  test_iterator_traits.cpp  test_output_iterator.cpp  test_random_access_iterator.cpp  test_range.cpp  test_readable.cpp  test_readable_traits.cpp  test_regular.cpp  test_semiregular.cpp  test_sentinel.cpp  test_sentinel_for.cpp  test_sized_sentinel.cpp  test_sized_sentinel_for.cpp  test_strict_totally_ordered.cpp  test_swappable.cpp  test_totally_ordered.cpp  test_writable.cpp
meta/test_package/: CMakeLists.txt  example.cpp
ranges/: CMakeLists.txt  conanfile.py
ranges/test/: CMakeLists.txt  test_input_transformer.cpp  test_readable_transformed_input_range.cpp  test_sized_input_transformer.cpp  test_sized_transformed_input_range.cpp  test_transformed_input_range.cpp  test_transformed_input_range_iterator.cpp
test/: CMakeLists.txt  main.cpp  test_adaptive_iterator.cpp  test_b16.cpp  test_b32.cpp  test_b64.cpp  test_base16.cpp  test_base32.cpp  test_base64.cpp  test_base_n.hpp  test_wrap_integer.cpp
test/data/: random_data.b32.sha256  random_data.b64.sha256  random_data.sha256
test_helpers/: CMakeLists.txt  conanfile.py
test_helpers/include/test_helpers/: base_n.hpp  codec_helpers.hpp  noop_iterator.hpp  noop_range.hpp  noop_transformer.hpp  requirements.hpp
test_helpers/test_package/: CMakeLists.txt  conanfile.py  example.cpp
(+751 files in other folders)
