# conanws
cmake_minimum_required(VERSION 3.3)
project(mgs CXX)

add_subdirectory(meta "/home/theo/Projects/playground/base64/build/./meta/")
add_subdirectory(exceptions "/home/theo/Projects/playground/base64/build/./exceptions/")
add_subdirectory(test_helpers "/home/theo/Projects/playground/base64/build/./test_helpers/")
add_subdirectory(base_n "/home/theo/Projects/playground/base64/build/./base_n/")
add_subdirectory(base64 "/home/theo/Projects/playground/base64/build/./base64/")
add_subdirectory(all "/home/theo/Projects/playground/base64/build/./all/")
